@@ -1,3 +1,7 @@
+2002-04-22  John Harper  <jsh@unfactored.org>
+
+	* events.c: more focus change fallout
+
 2002-04-21  John Harper  <jsh@unfactored.org>
 
 	* events.c (events_init): pointer-motion-threshold isn't set
